--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 body{
-    background-color: aquamarine;
-    font-weight: bolder;
-    color: blueviolet;
+    background-color: rgb(0, 0, 255);
+    font-style: italic;
+    color: rgb(21, 255, 0);
 }
